# REWISE4new

./: .gitignore  README.md  agent1q0v2kmyt8z_data.json  functions_chat.py  pyproject.toml  requirements.txt  server.py
AI Engine Chat/: chat.py  functions_chat.py
Agentverse Agents/: learningagent.py  quizagent.py
Extra/: originalgptagent.py
IGCSE_Biology/: IGCSE_Biology.py
rewise4/: package.json
rewise4/public/: index.html
rewise4/src/: App.css  App.js
rewise4/src/Components/: Chat.js  ChatBar.js  Display.js  Menu.js
rewise4/src/Pages/: Learn.jsx  Quiz.jsx  Track.jsx
rewise4/src/Styles/: Learn.css  Menu.css  Track.css
