[tool.poetry]
name = "rewise4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
ai-engine = "^0.0.1"
langchain = "^0.2.10"
uagents = "^0.14.0"
uagents-ai-engine = "^0.4.0"
openai = "^1.37.0"
langchain-chroma = "^0.1.2"
langchain-community = "^0.2.9"
langchain-core = "^0.2.22"
langchain-openai = "^0.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
